...

    <TextView
        android:id="@+id/publicShareDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_half_padding"
        android:text="@string/share_via_link_create_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle" />

...

            <LinearLayout
                android:id="@+id/shareViaLinkNameSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/shareViaLinkNameValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <RadioGroup
                android:id="@+id/shareViaLinkEditPermissionGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/shareViaLinkEditPermissionReadOnly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/shareViaLinkEditPermissionReadAndWrite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/shareViaLinkEditPermissionUploadFiles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <RelativeLayout
                android:id="@+id/shareViaLinkPasswordSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/shareViaLinkPasswordSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/shareViaLinkPasswordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:paddingRight="@dimen/standard_half_padding"
                    android:paddingTop="@dimen/standard_half_padding"
                    android:text="@string/share_via_link_password_label"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
...

            <EditText
                android:id="@+id/shareViaLinkPasswordValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <RelativeLayout
                android:id="@+id/shareViaLinkExpirationSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/shareViaLinkExpirationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/shareViaLinkExpirationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:paddingRight="@dimen/standard_half_padding"
                    android:paddingTop="@dimen/standard_half_padding"
                    android:text="@string/share_via_link_expiration_date_label"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/shareViaLinkExpirationValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/shareViaLinkExpirationExplanationLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/public_link_error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/cancelButton"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
...

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/saveButton"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
...
