...

    <string name="error__upload__local_file_not_copied">%1$s could not be copied to %2$s local folder</string>
    <string name="prefs_camera_picture_upload_path_title">Picture upload path</string>

    <string name="share_link_no_support_share_api">Sorry, sharing is not enabled on your server. Please contact your
		administrator.</string>
    <string name="share_link_file_no_exist">Unable to share. Please check whether the file exists</string>
    <string name="share_link_file_error">An error occurred while trying to share this file or folder</string>
    <string name="unshare_link_file_no_exist">Unable to unshare. Please check whether the file exists</string>
    <string name="unshare_link_file_error">An error occurred while trying to unshare this file or folder</string>
    <string name="update_link_file_no_exist">Unable to update. Please check whether the file exists </string>
    <string name="update_link_file_error">An error occurred while trying to update the share</string>
    <string name="share_link_password_title">Enter a password</string>
...
    <string name="streaming_position_not_available">\"Position not available\"</string>
    <string name="error_no_network_connection">Device is not connected to a network</string>
    <string name="share_no_public_links">No public links created yet</string>
    <string name="share_no_link_in_this_share">This share has no link</string>
    <string name="share_warning_about_forwarding_public_links">Anyone with the link has access to the file/folder</string>
    <string name="share_via_link_default_password">*****</string>
    <string name="share_via_link_password_enforced_label">"Password *"</string>
    <string name="share_via_link_expiration_date_enforced_label">"Expiration *"</string>
    <string name="share_via_link_expiration_date_explanation_label">The public link will expire no later than %1$d days after it is created</string>
    <string name="share_via_link_default_name_template">%1$s link</string>
    <string name="private_link_info">This is a private link, only people who have access to the file/folder can use it. Use it as a permanent link for yourself or to point others to files within shares.</string>
    <string name="file_private_link_error">Private link is not available for this file</string>
    <string name="download_notification_channel_name">Downloads</string>
    <string name="download_notification_channel_description">See the download file name and progress</string>
...
